<resources>
    <string name="app_name">AnimalQuiz</string>
    <string name="action_settings">Settings</string>


    <string name="question_text">This is Animal %1$d of %2$d</string>


    <string name="number_of_guesses_title">Number of Guesses</string>
    <string name="number_of_guesses_description">Show 2, 4 or 6 Guess Options</string>


    <string name="animal_types_title">Animals</string>


    <string name="animal_types_description">Types of Animals that you can include in the quiz</string>


    <string name="choose_background_color">Choose Background Color</string>


    <string name="choose_color_description">Choose One of These Colors as the Background Color</string>


    <string name="default_color_black">Black</string>

    <string name="choose_font">Font for Quiz</string>

    <string name="choose_font_description">Choose one of these fonts for quiz</string>


    <string name="default_font">Chunkfive.otf</string>
    <string name="title_activity_settings">SettingsActivity</string>


    <string name="results_string_value">%1$d number of guesses, and %2$.02f%% correct</string>


    <string name="reset_animal_quiz">Restart Animal Quiz</string>


    <string name="wrong_answer_message">No!</string>

    <string name="default_animal_type">Wild_Animals</string>

    <string name="toast_message">One Type of Animals must be selected. The Default
                                    Value is Wild Animals</string>

    <string name="change_message">New Changes are Applied</string>


</resources>
