<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">


    <ListPreference
        android:defaultValue="4"
        android:entries="@array/number_of_guesses_list"
        android:entryValues="@array/number_of_guesses_list"
        android:key="settings_numberOfGuesses"
        android:persistent="true"
        android:summary="@string/number_of_guesses_description"
        android:title="@string/number_of_guesses_title"></ListPreference>


    <MultiSelectListPreference
        android:defaultValue="@array/type_of_animals_values"
        android:entries="@array/type_of_animals"
        android:entryValues="@array/type_of_animals_values"
        android:key="settings_animalsType"
        android:persistent="true"
        android:summary="@string/animal_types_description"
        android:title="@string/animal_types_title"></MultiSelectListPreference>


    <ListPreference
        android:defaultValue="@string/default_color_black"
        android:entries="@array/colors"
        android:entryValues="@array/colors"
        android:key="settings_quiz_background_color"
        android:persistent="true"
        android:summary="@string/choose_color_description"
        android:title="@string/choose_background_color"></ListPreference>


    <ListPreference
        android:defaultValue="@string/default_font"
        android:entries="@array/fonts"
        android:entryValues="@array/fonts_values"
        android:key="settings_quiz_font"
        android:persistent="true"
        android:summary="@string/choose_font_description"
        android:title="@string/choose_font"></ListPreference>


</PreferenceScreen>